--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <script src="lib/p5/p5.js"></script>
     <script src="lib/p5/addons/p5.dom.js"></script>
     <script src="lib/p5/addons/p5.sound.js"></script>
+    <!-- if you split your code into multiple files, put the extra files here (inside a script tag) -->
     <script src="sketch.js"></script>
   <style> body {padding: 0; margin: 0;} </style>
   </head>
