add "back to top" button

--- a/index.html
+++ b/index.html
@@ -6,8 +6,26 @@
     <script src="lib/p5/addons/p5.sound.js"></script>
     <!-- if you split your code into multiple files, put the extra files here (inside a script tag) -->
     <script src="sketch.js"></script>
-  <style> body {padding: 0; margin: 0;} </style>
+    <style>
+     body {
+         padding: 0;
+         margin: 0;
+     }
+     nav {
+         position: absolute;
+         bottom: 0;
+         right: 0;
+         font-size: 24px;
+         color: #eee;
+         background-color: #222;
+         padding: 20px;
+     }
+     nav > a:visited {
+         color: #eee;
+     }
+    </style>
   </head>
   <body>
+    <nav><a href=".." style="text-decoration: none;">Back to top</a></nav>
   </body>
 </html>
