reword back to gallery button

--- a/index.html
+++ b/index.html
@@ -26,6 +26,6 @@
     </style>
   </head>
   <body>
-    <nav><a href=".." style="text-decoration: none;">Back to top</a></nav>
+    <nav><a href=".." style="text-decoration: none;">back to gallery</a></nav>
   </body>
 </html>
