--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
          color: #eee;
          background-color: #222;
          padding: 20px;
+         border: #ddd;
+         border-style: solid;
+         border-width: 5px;
      }
      nav > a:visited {
          color: #eee;
