make the button translucent

--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
          color: #eee;
          background-color: #222;
          padding: 20px;
+         opacity: 0.5;
+         transition: opacity 0.3s;
      }
      nav > a:visited {
          color: #eee;
+     }
+     nav:hover {
+         opacity: 1;
      }
     </style>
   </head>
