Implemented the movement of the earth.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <script src="lib/p5/addons/p5.sound.js"></script>
     <!-- if you split your code into multiple files, put the extra files here (inside a script tag) -->
     <script src="sketch.js"></script>
+    <script src="p5.gif.js"></script>
+    <script src="p5.gif.min.js"></script>
     <style>
      body {
          padding: 0;
